--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://github.com/entbappy/Branching-tutorial/raw/master/summarizer-data.zip
+  source_URL: https://github.com/trunglam2002/datasets/raw/main/Kmeans_1024_new.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
@@ -12,28 +12,28 @@ data_ingestion:
 data_validation:
   root_dir: artifacts/data_validation
   STATUS_FILE: artifacts/data_validation/status.txt
-  ALL_REQUIRED_FILES: ["train", "test", "validation"]
+  ALL_REQUIRED_FILES: '.csv'
 
 
 
 data_transformation:
   root_dir: artifacts/data_transformation
-  data_path: artifacts/data_ingestion/samsum_dataset
-  tokenizer_name: google/pegasus-cnn_dailymail
+  data_path: artifacts/data_ingestion/Kmeans_1024_new.csv
+  tokenizer_name: minhtoan/t5-small-wikilingua-vietnamese
 
 
 
 
 model_trainer:
   root_dir: artifacts/model_trainer
-  data_path: artifacts/data_transformation/samsum_dataset
-  model_ckpt: google/pegasus-cnn_dailymail
+  data_path: artifacts/data_transformation/summarize_dataset
+  model_ckpt: minhtoan/t5-small-wikilingua-vietnamese
 
 
 
 model_evaluation:
   root_dir: artifacts/model_evaluation
-  data_path: artifacts/data_transformation/samsum_dataset
-  model_path: artifacts/model_trainer/pegasus-samsum-model
+  data_path: artifacts/data_transformation/summarize_dataset
+  model_path: artifacts/model_trainer/vni-summary-model
   tokenizer_path: artifacts/model_trainer/tokenizer
   metric_file_name: artifacts/model_evaluation/metrics.csv
